[package]
name = "crk"
version = "0.1.0"
edition = "2021"
description = "WIP"
license = "MIT"
homepage = "https://github.com/DrSauron/crk"
repository = "https://github.com/DrSauron/crk.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
